--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
+        "@tiptap/starter-kit": "^2.0.0-beta.202",
+        "@tiptap/vue-3": "^2.0.0-beta.202",
         "v-calendar": "^3.0.0-alpha.8"
     }
 }
