--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/jetstream": "^2.12",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "spatie/laravel-backup": "^8.1",
         "stripe/stripe-php": "^9.9",
         "tightenco/ziggy": "^1.0"
